<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextManufacturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_manufacturer"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_model"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editTextTotalRounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_total_rounds"
        android:importantForAutofill="no"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkBoxRecoilSpring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_recoil_spring" />

    <EditText
        android:id="@+id/editTextRecoilRounds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_recoil_spring_rounds"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/button_save" />

</LinearLayout>