<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayoutManufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMfrFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_manufacturer"
            android:textSize="@dimen/text_medium" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/textViewFragMfr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewModelFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_model"
            android:textSize="@dimen/text_medium" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/textViewFragModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRoundCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_total_rounds"
            android:textSize="@dimen/text_medium" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/textViewFragTotalRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutRecoilSpring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/big_padding"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewRecoil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_recoil_spring_rounds"
            android:textSize="@dimen/text_medium" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/textViewFragRecoilRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextDark"
            android:textSize="@dimen/text_large" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutResetRecoil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/big_padding"
        android:visibility="gone">

        <Button
            android:id="@+id/buttonResetRecoilYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorReset"
            android:text="@string/button_reset_recoil_confirm"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonResetRecoil"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/colorReset"
            android:text="@string/button_reset_recoil_spring" />

        <Button
            android:id="@+id/buttonResetRecoilNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_cancel"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUpdateRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNewRoundCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/button_hint_update_rounds"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonUpdateRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/button_update_rounds" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDeleteConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:text="@string/text_delete_confirm"
        android:textColor="@color/colorTextDark"
        android:textSize="@dimen/text_large"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDeleteYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorDelete"
            android:text="@string/button_delete_yes"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonDeleteGun"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/colorDelete"
            android:text="@string/button_delete" />

        <Button
            android:id="@+id/buttonDeleteNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_delete_no"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCloseFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_padding"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_close" />

</LinearLayout>